--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.5.0",
     "bootstrap": "^5.3.6",
     "vue": "^3.5.13"
   },
