--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^13.5.0",
     "bootstrap": "^5.3.6",
+    "gsap": "^3.13.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
