--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.5.0",
+    "ably": "^2.10.1",
     "bootstrap": "^5.3.6",
     "gsap": "^3.13.0",
     "vue": "^3.5.13",
