--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^13.5.0",
     "ably": "^2.10.1",
     "bootstrap": "^5.3.6",
+    "chess.js": "^1.4.0",
     "gsap": "^3.13.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
