--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@vite-pwa/assets-generator": "^1.0.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.0.3",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
