--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.5.0",
+    "@vueuse/head": "^2.0.0",
     "ably": "^2.10.1",
     "bootstrap": "^5.3.6",
     "chess.js": "^1.4.0",
